frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: expense
  # labels of deployment resource
  labels:
    app: frontend
    tier: web
    project: expense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      tier: web
      project: expense
  template:
    metadata:
      labels:
        app: frontend
        tier: web
        project: expense
    spec:
      # It won't refer the nginxconfig from image,it refer the nginxconfig from configmap 
      # we added config as volume
      volumes: 
      - name: nginx
        configMap:
          name: nginx
          items:
          - key: nginx.conf
            path: nginx.conf
      containers:
      - name: nginx
        image: poojarivinod1/frontend:1.2.0
        resources: # This is copied from 07-resources.yaml
        # soft limit (minimum)
          requests:
            memory: "68Mi"
            cpu: "100m"
        # hard limit (maximum)
          limits:
            memory: "128Mi"
            cpu: "150m"
        ports: # when you free check without this ports
        - containerPort: 8080
        # volume is mount on the /etc/nginx/nginx.conf path
        volumeMounts:
        - name: nginx
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
