frontend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: expense
spec: # we are using ingress
  selector: # labels are used as selectors, it connects to that pod
    app: frontend
    tier: web
    project: expense
  ports:
  - protocol: TCP
    port: 80 # service port
    targetPort: 8080 # target container port
